# mtlgemm

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
flex_gemm/kernels/: __init__.py
flex_gemm/kernels/cuda/spconv/: neighbor_map.cu
flex_gemm/kernels/metal/: __init__.py  ext.mm
flex_gemm/kernels/metal/common/: dtypes.h  metal_context.h  metal_context.mm
flex_gemm/kernels/metal/grid_sample/: api.h  grid_sample.metal  weighted_sum.metal
flex_gemm/kernels/metal/hash/: api.h  hash.h  hash.metal
flex_gemm/kernels/metal/serialize/: api.h  hilbert.h  serialize.metal  utils.h  z_order.h
flex_gemm/kernels/metal/sparse_attn/: sparse_attn.metal  sparse_attn_bwd.metal  sparse_attn_bwd_flash.metal  sparse_attn_tiled.metal
flex_gemm/kernels/metal/spconv/: api.h  config.h  neighbor_map.metal  spconv_gemm.metal
flex_gemm/ops/: utils.py
flex_gemm/ops/spconv/: submanifold_conv3d.py
flex_gemm/utils/: autotuner.py
tests/: bench_mps_spconv.py  bench_mps_spconv_bwd.py  bench_sparse_attn.py  bench_sparse_attn_bwd.py  conftest.py  spconv_bwd.py  spconv_fwd.py  test_grid_sample.py  test_hashmap.py  test_masked_bwd_parity.py  test_masked_vs_dense_parity.py  test_mps_bwd_smoke.py  test_mps_device_preserved.py  test_parity.py  test_serialize.py  test_sparse_attn_bwd_parity.py  test_sparse_attn_parity.py  test_spconv_bwd.py  test_spconv_fwd.py  test_u64_hashmap_mps.py
